--- a/app/src/main/res/layout/activity_aboutus.xml
+++ b/app/src/main/res/layout/activity_aboutus.xml
@@ -79,7 +79,8 @@
             android:textColor="#9D9C9C"
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
-            android:text="丝网行业信息服务平台。丝网加工、订做、现货的供应信息，物流供应信息，厂房租赁、机器出售、招聘信息，在平台上都可以找到。此外，平台每日更新盘条报价等原材料价格信息，丝网相关招投标信息，丝网行业相关展会信息，行业新闻等。"
+            android:lineSpacingExtra="3dp"
+            android:text="        丝网行业信息服务平台。丝网加工、订做、现货的供应信息，物流供应信息，厂房租赁、机器出售、招聘信息，在平台上都可以找到。此外，平台每日更新盘条报价等原材料价格信息，丝网相关招投标信息，丝网行业相关展会信息，行业新闻等。"
             android:textSize="14sp"
             android:layout_marginTop="36dp"
             android:layout_gravity="center_horizontal"
