--- a/app/src/main/res/layout/activity_recruit_release2.xml
+++ b/app/src/main/res/layout/activity_recruit_release2.xml
@@ -30,7 +30,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
-                    android:textColor="@color/black_color"
+                    android:textColor="@color/theme_color"
                     android:text="标题"/>
 
                 <EditText
@@ -67,7 +67,7 @@
                     android:layout_height="wrap_content"
                     android:padding="12dp"
                     android:text="职位信息"
-                    android:textColor="@color/black_color"
+                    android:textColor="@color/theme_color"
                     android:textSize="14sp" />
 
                 <View
@@ -529,7 +529,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="岗位职责"
-                        android:textColor="@color/black_color"
+                        android:textColor="@color/theme_color"
                         android:textSize="14sp" />
 
                     <TextView
