--- a/app/src/main/res/drawable/shape_search_bg.xml
+++ b/app/src/main/res/drawable/shape_search_bg.xml
@@ -2,9 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#F5F9FE" />
+    <solid android:color="@color/while_color"/>
+    <corners android:radius="3dp"/>
+    <stroke android:color="#DEDFE0" android:width="0.5dp"/>
 
-    <stroke
-        android:width="1dp"
-        android:color="@color/theme_color" />
 </shape>
