--- a/app/src/main/res/layout/activity_plus2.xml
+++ b/app/src/main/res/layout/activity_plus2.xml
@@ -18,7 +18,9 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
             android:gravity="center"
             android:text="发布信息"
             android:textSize="18sp"
@@ -329,7 +331,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="3dp"
-                            android:text="机器出售"
+                            android:text="设备出售"
                             android:textSize="13sp"
                             android:textColor="@color/text_black_color"/>
 
